--- a/zal.extractor/pom.xml
+++ b/zal.extractor/pom.xml
@@ -13,14 +13,14 @@
 		<dependency>
 			<groupId>org.apache.nutch</groupId>
 			<artifactId>nutch</artifactId>
-			<version>1.6</version>
+			<version>1.8</version>
 			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-core</artifactId>
-			<version>1.1.1</version>
+			<artifactId>hadoop-common</artifactId>
+			<version>2.3.0</version>
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
